# NameGenerator

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.de20983  NameGenerator.pro  README.md  main.cpp  namegenerator.cpp  namegenerator.h  namegenerator.ui  namegenerator.ui.autosave  namesgenerator.cpp  namesgenerator.h  resources.qrc
